[gd_scene load_steps=15 format=2]

[ext_resource path="res://UITheme.tres" type="Theme" id=1]
[ext_resource path="res://UpdateTime.gd" type="Script" id=2]
[ext_resource path="res://ModifiedRisingBeep.wav" type="AudioStream" id=3]
[ext_resource path="res://Fonts/RobotoMono/RobotoMono-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Graphics/PlayButton.png" type="Texture" id=5]
[ext_resource path="res://Graphics/RestartButton.png" type="Texture" id=6]
[ext_resource path="res://Graphics/ResumeButton.png" type="Texture" id=7]
[ext_resource path="res://Click.wav" type="AudioStream" id=8]
[ext_resource path="res://Graphics/PauseButton.png" type="Texture" id=9]
[ext_resource path="res://Graphics/WoodBG_Leaves.png" type="Texture" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.14902, 0.172549, 0.231373, 1 )

[sub_resource type="InputEventAction" id=4]
action = "start_timer"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 120
font_data = ExtResource( 4 )

[node name="Background" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
start_button_icon = ExtResource( 5 )
pause_button_icon = ExtResource( 9 )
resume_button_icon = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -336.0
margin_top = -3.0
margin_right = -124.0
margin_bottom = 203.0
theme = ExtResource( 1 )
shortcut_in_tooltip = false
shortcut = SubResource( 3 )
icon = ExtResource( 5 )
flat = true
icon_align = 1
expand_icon = true

[node name="ResetButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 124.0
margin_top = -3.0
margin_right = 336.0
margin_bottom = 203.0
theme = ExtResource( 1 )
icon = ExtResource( 6 )
flat = true
icon_align = 1
expand_icon = true

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -362.0
margin_top = -265.0
margin_right = 362.0
margin_bottom = -76.0
custom_colors/font_color = Color( 0.380392, 0.243137, 0.00784314, 1 )
custom_fonts/font = SubResource( 5 )
text = "60"
align = 1
valign = 1

[node name="SecondTimer" type="Timer" parent="."]

[node name="TimeOutSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="timeout" from="." to="." method="_on_Background_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="timeout" from="SecondTimer" to="." method="_on_SecondTimer_timeout"]
